# Python-MolecularDynamics3D

./: .gitignore  LICENSE  README.md  conda-environment.yaml  conda_environment.yaml  main.py  pyproject.toml  run.ksh  to_remove.py
code/: __main__.py
code/main/: atom.py  diffusion_tensor.py  molecule.py
code/scripts/: calculateProperties.cpp  compile.sh
code/utilities/: utilities_diffusion_tensor.py  utilities_math.py  utilities_molecule.py  utilities_strings.py  utilities_vector.py
code/validation/: validate_parameters.py  validation_arrays.py  validation_molecule.py  validation_parameters.py
data/: product.csv  product.yaml  reactant.yaml  simulation.yaml
documents/: class_atom.md
molecular_dynamics/main/: atom.py  diffusion_tensor.py  molecule.py
molecular_dynamics/managers/: cmanager_changewd.py
molecular_dynamics/utilities/: utilities_molecule.py  utilities_strings.py  utilities_vector.py
src/: __main__.py
src/main/: molecule.py
src/moldynamics3d/: __main__.py
src/moldynamics3d/data/: template_simulation.yaml
src/moldynamics3d/main/: atom.py  (+1 more)
src/utilities/: utilities_strings.py
src/validation/: validation_molecule.py  validation_parameters.py
test_unit/test_main/: test_atom.py  test_molecule.py
test_unit/test_managers/: test_context_managers_swd.py
test_unit/test_utilities/: test_utilities_diffusion_tensor.py  test_utilities_math.py  test_utilities_molecules.py  test_utilities_strings.py
test_unit/test_validation/: test_validation_molecules.py  test_validation_parameters.py
tests/: context_manager.py  test_molecule.py
tests/data/: reactant.csv
(+2 files in other folders)
