# This is the installation script for the package moldynamics3d. For more
# information on how more parameters can be added, see:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


# ----------------------------------------- Build System ----------------------------------------- #


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# ---------------------------------------- Project Details --------------------------------------- #


[project]
name = "moldynamics3d"
authors = [
    {name = "Andres Garcia Escovar", email = "andrumen1@yahoo.com"},
]
description = "A simple molecular dynamics simulator for 3D molecules."
readme = "README.md"
requires-python = ">=3.11.6"
keywords = [
    "dynamics", "molecular", "molecular dynamics", "molecules", "stochastic"
]
license = {text = "MIT"}
dependencies = [
    "mendeleev=1.1.0",
    "numpy==2.4.2",
    "pyyaml==6.0.1"
]
version = "0.0.1"


# ---------------------------------------- Optional Fields --------------------------------------- #


[project.optional-dependencies]
debugging = ["icecream==2.1.3"]


# --------------------------------------- Package Commands --------------------------------------- #


[project.scripts]
moldynamics3d = "moldynamics3d.__main__:main"


# -------------------------------------- Packages to Include ------------------------------------- #


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
